[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/Repairshop/Repair_HUD.gd" type="Script" id=2]
[ext_resource path="res://Textures/Loot_Objects/mine.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 1 )

[node name="Repair_HUD" type="Node2D"]
z_index = 3
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.384314, 0, 0.643137, 1 )
show_behind_parent = true
margin_left = 60.0
margin_top = 80.0
margin_right = 580.0
margin_bottom = 460.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 220.0
margin_top = 100.0
margin_right = 418.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 1 )
text = "Repair Ship"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Durability" type="Node2D" parent="."]
position = Vector2( 140, 360 )

[node name="Durability_lbl" type="Label" parent="Durability"]
modulate = Color( 0.501961, 0.898039, 0.34902, 1 )
margin_left = -59.0
margin_top = -40.0
margin_right = 81.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 2 )
text = "Durability: 4/10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Durability_btn" type="Button" parent="Durability"]
margin_left = -59.0
margin_top = -4.0
margin_right = 93.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "x 0 for Upgrade"
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shield" type="Node2D" parent="."]
position = Vector2( 480, 360 )

[node name="Shield_lbl" type="Label" parent="Shield"]
modulate = Color( 0.34902, 0.898039, 0.85098, 1 )
margin_left = -60.0
margin_top = -40.0
margin_right = 80.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 2 )
text = "Shield: 2/5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shield_btn" type="Button" parent="Shield"]
margin_left = -73.0
margin_top = -4.0
margin_right = 79.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "x 0 for Upgrade"
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="visibility_changed" from="." to="." method="_on_Repair_HUD_visibility_changed"]
[connection signal="pressed" from="Durability/Durability_btn" to="." method="_on_Durability_btn_pressed"]
[connection signal="pressed" from="Shield/Shield_btn" to="." method="_on_Shield_btn_pressed"]
